force-app/src/objects/FontevaPay__Dispute_Evidence__c.object
<CustomObject>
    <description>Evidence records for a Charge Dispute</description>
    <fields>
        <fullName>FontevaPay__Access_Activity_Log__c</fullName>
        <inlineHelpText>Documentation supporting access by purchaser</inlineHelpText>
        <label>Access Activity Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Billing_City__c</fullName>
        <formula>FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__EPayment__r.OrderApi__Billing_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Billing_Country__c</fullName>
        <formula>FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__EPayment__r.OrderApi__Billing_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Billing_Postal_Code__c</fullName>
        <formula>FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__EPayment__r.OrderApi__Billing_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Billing_Street__c</fullName>
        <formula>FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__EPayment__r.OrderApi__Billing_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Carrier__c</fullName>
        <inlineHelpText>Name of shipper utilized for delivery</inlineHelpText>
        <label>Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Customer_Name__c</fullName>
        <formula>FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__EPayment__r.OrderApi__Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Description__c</fullName>
        <inlineHelpText>Explanation of the product or service</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Dispute__c</fullName>
        <description>Charge Dispute</description>
        <label>Dispute</label>
        <referenceTo>FontevaPay__Dispute__c</referenceTo>
        <relationshipLabel>Dispute Evidence</relationshipLabel>
        <relationshipName>Dispute_Evidence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Document_Count__c</fullName>
        <label>Document Count</label>
        <summaryForeignKey>FontevaPay__Dispute_Evidence_Documentation__c.FontevaPay__Dispute_Evidence__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Email__c</fullName>
        <description>Email</description>
        <formula>FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__EPayment__r.OrderApi__Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Product_Service_Type__c</fullName>
        <inlineHelpText>Category of Product of Service provided</inlineHelpText>
        <label>What type of product or service is this?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Product</fullName>
                </value>
                <value>
                    <fullName>Digital Product or Service</fullName>
                </value>
                <value>
                    <fullName>Offline Service</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Booking or Reservation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FontevaPay__Recommended_Documents__c</fullName>
        <description>Recommended Document Types for this Dispute Evidence Type.</description>
        <formula>CASE(FontevaPay__Product_Service_Type__c,
  &quot;Physical Product&quot;, &quot;Customer Communication, Customer Signature, Shipping Documentation, Other Evidence, Receipt&quot;,
  &quot;Digital Product or Service&quot;, &quot;Customer Communication, Customer Signature, Receipt&quot;,
  &quot;Offline Service&quot;, &quot;Customer Communication, Customer Signature, Shipping Documentation, Other Evidence, Receipt&quot;,
  &quot;Event&quot;, &quot;Customer Communication&quot;,
  &quot;Booking or Reservation&quot;, &quot;Customer Communication&quot;,
  &quot;Other&quot;, &quot;Customer Communication&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recommended Documentation to support this Dispute</inlineHelpText>
        <label>Recommended Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Shipping_Street__c</fullName>
        <label>Shipping Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Submission_Status__c</fullName>
        <label>Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FontevaPay__Tracking_Number__c</fullName>
        <label>Tracking number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Dispute Evidence</label>
    <listViews>
        <fullName>FontevaPay__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DE-{00000}</displayFormat>
        <label>Dispute Evidence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispute Evidence</pluralLabel>
    <recordTypes>
        <fullName>FontevaPay__Booking_or_Reservation</fullName>
        <active>true</active>
        <label>Booking or Reservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>FontevaPay__Digital_product_or_service</fullName>
        <active>true</active>
        <label>Digital product or service</label>
    </recordTypes>
    <recordTypes>
        <fullName>FontevaPay__Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>FontevaPay__Offline_Service</fullName>
        <active>true</active>
        <label>Offline Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>FontevaPay__Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>FontevaPay__Physical_Product</fullName>
        <active>true</active>
        <label>Physical Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FontevaPay__ACH_Dispute_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(FontevaPay__Dispute__r.FontevaPay__Charge__r.FontevaPay__Payment_Method_Type__c, &apos;bank_account&apos;)</errorConditionFormula>
        <errorMessage>Dispute Evidence Record cannot be created for ACH Payment Method.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FontevaPay__Block_Evidence_Edits_Once_Submitted</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(FontevaPay__Submission_Status__c), &apos;Submitted&apos;)</errorConditionFormula>
        <errorMessage>This Evidence has been submitted and cannot be altered or deleted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FontevaPay__Enforce_Dispute_Status_Needs_Response</fullName>
        <active>true</active>
        <errorConditionFormula>FontevaPay__Dispute__r.FontevaPay__Status__c &lt;&gt; &apos;needs_response&apos; &amp;&amp; FontevaPay__Dispute__r.FontevaPay__Status__c &lt;&gt; &apos;warning_needs_response&apos;</errorConditionFormula>
        <errorMessage>The dispute submission process is complete for this record.  Evidence cannot be submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FontevaPay__Enforce_Single_Evidence_Record</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; FontevaPay__Dispute__r.FontevaPay__Evidence_Record_Count__c  &gt; 0</errorConditionFormula>
        <errorMessage>You can only add a single evidence record to a dispute.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FontevaPay__Preserve_Documents_Once_Submitted</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(FontevaPay__Submission_Status__c, &apos;Submitted&apos;) &amp;&amp; ISCHANGED( FontevaPay__Document_Count__c )</errorConditionFormula>
        <errorMessage>You cannot add, delete, or edit documentation once the dispute evidence is submitted.</errorMessage>
    </validationRules>
</CustomObject>